Fix @amirm3hdi comment. Removed Overflow css

--- a/app/basement/static/css/main.css
+++ b/app/basement/static/css/main.css
@@ -272,7 +272,3 @@ md-toast {
   font-size: 1.3em;
   cursor: pointer;
 }
-
-.overF {
-  overflow: hidden;
-}
